--- a/app/src/main/res/layout/event_hub.xml
+++ b/app/src/main/res/layout/event_hub.xml
@@ -15,17 +15,28 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="15dp"
+            android:background="@android:color/white"
+            android:text="@string/event_hub"
+            android:textColor="@color/dark_blue"
+            android:textSize="25sp"
+            android:textStyle="bold" />
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_horizontal">
+            android:gravity="center_horizontal"
+            android:layout_marginTop="25dp"
+            android:layout_marginBottom="25dp">
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/event_add_button"
-                android:layout_marginTop="50dp"
-                android:layout_marginBottom="50dp"
-                android:background="#3F51B5"
+                android:textSize="14sp"
+                android:backgroundTint="@color/dark_blue"
                 android:id="@+id/btnNewEvent" />
             <Space
                 android:layout_width="40dp"
@@ -34,9 +45,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/event_see_my_events"
-                android:layout_marginTop="50dp"
-                android:layout_marginBottom="50dp"
-                android:background="#3F51B5"
+                android:textSize="14sp"
+                android:backgroundTint="@color/dark_blue"
                 android:id="@+id/btnMyEvents" />
         </LinearLayout>
         <ListView
