Better UI for Event List

--- a/app/src/main/res/layout/new_event.xml
+++ b/app/src/main/res/layout/new_event.xml
@@ -41,7 +41,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="15dp"
-                android:layout_marginTop="14dp"
+                android:layout_marginTop="15dp"
                 android:text="@string/event_title"
                 android:textColor="@color/darker_gray"
                 android:textSize="15sp"
@@ -94,6 +94,7 @@
                     android:layout_height="match_parent"
                     android:text="@string/event_type"
                     android:textColor="@color/darker_gray"
+                    android:gravity="center_vertical"
                     android:textSize="15sp"
                     android:textStyle="bold"/>
 
