--- a/app/src/main/res/layout/event_hub.xml
+++ b/app/src/main/res/layout/event_hub.xml
@@ -49,7 +49,19 @@
                 android:backgroundTint="@color/dark_blue"
                 android:id="@+id/btnMyEvents" />
         </LinearLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/event_list"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="5dp"
+            android:textColor="@color/darker_gray"
+            android:textSize="18sp"
+            android:textStyle="bold"/>
         <ListView
+            android:layout_marginStart="30dp"
+            android:layout_marginEnd="30dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/eventListView"/>
