fixed scroll, navbar(?)

--- a/app/src/main/res/menu/bottom_navmenu.xml
+++ b/app/src/main/res/menu/bottom_navmenu.xml
@@ -1,19 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:title=""
+    <item
+        android:id="@+id/home"
         android:icon="@drawable/baseline_home_filled_24"
-        android:id="@+id/home"/>
-    <item android:title=""
+        android:iconTint="@color/dark_blue"
+        android:title="" />
+    <item
+        android:id="@+id/forms"
         android:icon="@drawable/baseline_forms_24"
-        android:id="@+id/forms"/>
-    <item android:title=""
+        android:iconTint="@color/dark_blue"
+        android:title="" />
+    <item
+        android:id="@+id/events"
         android:icon="@drawable/baseline_event_24"
-        android:id="@+id/events"/>
-    <item android:title=""
+        android:iconTint="@color/dark_blue"
+        android:title="" />
+    <item
+        android:id="@+id/feedback"
         android:icon="@drawable/baseline_star_24"
-        android:id="@+id/feedback"/>
-    <item android:title=""
+        android:iconTint="@color/dark_blue"
+        android:title="" />
+    <item
+        android:id="@+id/chatbot"
         android:icon="@drawable/baseline_chat_bubble_24"
-        android:id="@+id/chatbot"/>
+        android:iconTint="@color/dark_blue"
+        android:title="" />
 </menu>
