--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -14,6 +14,7 @@
         android:layout_marginTop="316dp"
         android:fontFamily="@font/inter"
         android:text="Dashboard"
+        android:textColor="#373636"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -76,6 +77,7 @@
         android:layout_marginTop="64dp"
         android:fontFamily="@font/inter"
         android:text="Hello"
+        android:textColor="#373636"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -88,6 +90,7 @@
         android:layout_marginTop="64dp"
         android:fontFamily="@font/inter_semibold"
         android:text="Sarah,"
+        android:textColor="#373636"
         android:textSize="24sp"
         app:layout_constraintStart_toEndOf="@+id/text"
         app:layout_constraintTop_toTopOf="parent" />
