--- a/app/src/main/res/layout/sign_up.xml
+++ b/app/src/main/res/layout/sign_up.xml
@@ -44,6 +44,7 @@
         android:hint="Password"
         android:inputType="textPassword"
         android:paddingStart="17dp"
+        android:textColor="#373636"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -55,6 +56,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="36dp"
         android:text="Welcome!"
+        android:textColor="#373636"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/sign_up" />
@@ -107,6 +109,7 @@
         android:hint="Last Name"
         android:paddingStart="17dp"
         android:singleLine="false"
+        android:textColor="#373636"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.307"
@@ -126,6 +129,7 @@
         android:hint="First Name"
         android:paddingStart="17dp"
         android:singleLine="false"
+        android:textColor="#373636"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.461"
@@ -133,7 +137,7 @@
         app:layout_constraintTop_toBottomOf="@+id/first" />
 
     <TextView
-        android:id="@+id/email"
+        android:id="@+id/lastResult"
         android:layout_width="39dp"
         android:layout_height="18dp"
         android:layout_marginStart="28dp"
@@ -157,11 +161,12 @@
         android:inputType="textEmailAddress"
         android:paddingStart="17dp"
         android:singleLine="false"
+        android:textColor="#373636"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.461"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/email" />
+        app:layout_constraintTop_toBottomOf="@+id/lastResult" />
 
     <Spinner
         android:id="@+id/spinner"
@@ -188,6 +193,7 @@
         android:layout_marginEnd="24dp"
         android:backgroundTint="@color/dark_blue"
         android:text="Sign Up"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spinner" />
