--- a/app/src/main/res/layout/travel_results2.xml
+++ b/app/src/main/res/layout/travel_results2.xml
@@ -12,7 +12,6 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="13dp"
-        android:fontFamily="@font/inter_semibold"
         android:text="Last Name:"
         android:textColor="@color/darker_gray"
         android:textStyle="bold"
@@ -20,13 +19,24 @@
         app:layout_constraintTop_toBottomOf="@+id/firstResult" />
 
     <TextView
+        android:id="@+id/others"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="13dp"
+        android:text="Traveling with others:"
+        android:textColor="@color/darker_gray"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/itinResults" />
+
+    <TextView
         android:id="@+id/dates"
         android:layout_width="wrap_content"
         android:layout_height="19dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="12dp"
-        android:fontFamily="@font/inter_semibold"
-        android:text="Dates of Meals Needed:"
+        android:text="Dates of Travel:"
         android:textColor="@color/darker_gray"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -96,7 +106,6 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="15dp"
-        android:fontFamily="@font/inter_semibold"
         android:text="First Name:"
         android:textColor="@color/darker_gray"
         android:textStyle="bold"
@@ -104,19 +113,61 @@
         app:layout_constraintTop_toBottomOf="@+id/studentinfo" />
 
     <TextView
-        android:id="@+id/meal"
+        android:id="@+id/itin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="13dp"
-        android:fontFamily="@font/inter_semibold"
-        android:text="Meals Attending:"
+        android:text="Itinerary:"
         android:textColor="@color/darker_gray"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/date1" />
 
+    <TextView
+        android:id="@+id/itinResults"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="8dp"
+        android:text="Itinerary..."
+        android:textColor="@color/dark_blue"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/itin" />
 
+    <TextView
+        android:id="@+id/othersResults"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="9dp"
+        android:text="Yes"
+        android:textColor="@color/dark_blue"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/others" />
+
+    <TextView
+        android:id="@+id/groupResults"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="8dp"
+        android:text="CS"
+        android:textColor="@color/dark_blue"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/group" />
+
+    <TextView
+        android:id="@+id/group"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="12dp"
+        android:text="Travel Group:"
+        android:textColor="@color/darker_gray"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/othersResults" />
 
     <Button
         android:id="@+id/submit"
@@ -137,7 +188,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="88dp"
         android:fontFamily="@font/inter"
-        android:text="Meal Results"
+        android:text="Travel Results"
         android:textColor="@color/dark_blue"
         android:textSize="27sp"
         android:textStyle="bold"
@@ -151,7 +202,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="268dp"
         android:fontFamily="@font/inter"
-        android:text="Student Meal Information"
+        android:text="Student Information"
         android:textColor="@color/dark_blue"
         android:textSize="16sp"
         android:textStyle="bold"
@@ -180,89 +231,5 @@
         app:layout_constraintHorizontal_bias="0.545"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/prog"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="12dp"
-        android:text="lunch"
-        android:textColor="@color/dark_blue"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/meal" />
-
-    <TextView
-        android:id="@+id/textView18"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="12dp"
-        android:fontFamily="@font/inter_semibold"
-        android:text="Days Attending Breakfast:"
-        android:textColor="@color/darker_gray"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/prog" />
-
-    <TextView
-        android:id="@+id/textView19"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="8dp"
-        android:fontFamily="@font/inter"
-        android:text="monday"
-        android:textColor="@color/dark_blue"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView18" />
-
-    <TextView
-        android:id="@+id/textView20"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="12dp"
-        android:fontFamily="@font/inter_semibold"
-        android:text="Days Attending Lunch:"
-        android:textColor="@color/darker_gray"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView19" />
-
-    <TextView
-        android:id="@+id/textView21"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="8dp"
-        android:fontFamily="@font/inter"
-        android:text="monday"
-        android:textColor="@color/dark_blue"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView20" />
-
-    <TextView
-        android:id="@+id/textView22"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="12dp"
-        android:fontFamily="@font/inter_semibold"
-        android:text="Days Attending Dinner:"
-        android:textColor="@color/darker_gray"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView21" />
-
-    <TextView
-        android:id="@+id/textView23"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="8dp"
-        android:fontFamily="@font/inter"
-        android:text="monday"
-        android:textColor="@color/dark_blue"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView22" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
