--- a/app/src/main/res/layout/single_event_display.xml
+++ b/app/src/main/res/layout/single_event_display.xml
@@ -183,6 +183,17 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginStart="15dp"
                 android:layout_marginEnd="15dp"/>
+            <Button
+                android:id="@+id/btnSubscribeEvent"
+                android:layout_width="342dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:layout_marginTop="30dp"
+                android:layout_marginEnd="30dp"
+                android:backgroundTint="@color/dark_blue"
+                android:text="@string/attend_event"
+                android:textColor="@color/white"
+                android:textSize="14sp" />
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
