--- a/app/src/main/res/layout/my_events.xml
+++ b/app/src/main/res/layout/my_events.xml
@@ -28,7 +28,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/event_list"
+            android:text="@string/myevent_list"
             android:layout_marginStart="15dp"
             android:layout_marginTop="15dp"
             android:layout_marginBottom="5dp"
@@ -45,6 +45,27 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/eventListView"/>
+        </LinearLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/myattend_list"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="5dp"
+            android:textColor="@color/darker_gray"
+            android:textSize="18sp"
+            android:textStyle="bold"/>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <ListView
+                android:layout_marginStart="30dp"
+                android:layout_marginEnd="30dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/attendeeListView"/>
         </LinearLayout>
     </LinearLayout>
     </androidx.core.widget.NestedScrollView>
