--- a/app/src/main/res/layout/single_event_display.xml
+++ b/app/src/main/res/layout/single_event_display.xml
@@ -184,7 +184,7 @@
                 android:layout_marginStart="15dp"
                 android:layout_marginEnd="15dp"/>
             <Button
-                android:id="@+id/btnSubscribeEvent"
+                android:id="@+id/btnAttendEvent"
                 android:layout_width="342dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
