--- a/app/src/main/res/layout/single_event_display.xml
+++ b/app/src/main/res/layout/single_event_display.xml
@@ -194,6 +194,23 @@
                 android:text="@string/attend_event"
                 android:textColor="@color/white"
                 android:textSize="14sp" />
+            <TextView
+                android:id="@+id/attendeesTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:layout_marginStart="15dp"
+                android:text="@string/event_attendees_mail"
+                android:textColor="@color/darker_gray"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+            <ListView
+                android:id="@+id/attendeesListView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="15dp"/>
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
