--- a/app/src/main/res/layout/forms.xml
+++ b/app/src/main/res/layout/forms.xml
@@ -15,7 +15,7 @@
         android:fontFamily="@font/inter"
         android:text="Forms"
         android:textColor="@color/dark_blue"
-        android:textSize="24sp"
+        android:textSize="27sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -35,7 +35,7 @@
         android:id="@+id/button"
         android:layout_width="match_parent"
         android:layout_height="80dp"
-        android:layout_marginTop="140dp"
+        android:layout_marginTop="176dp"
         android:background="@drawable/form_button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -53,7 +53,6 @@
                 android:paddingLeft="20dp"
                 android:paddingTop="18dp"
                 android:text="Meal Planning"
-                android:textColor="#373636"
                 android:textSize="16dp">
 
             </TextView>
@@ -67,19 +66,18 @@
                 android:paddingLeft="20dp"
                 android:text="View Results"
                 android:textColor="@color/dark_blue"
-                android:textSize="14dp">
-            </Button>
+                android:textSize="14dp"></Button>
         </LinearLayout>
 
         <ImageButton
             android:id="@+id/mealButton"
-            android:layout_width="25dp"
+            android:layout_width="55dp"
             android:layout_height="25dp"
-            android:scaleType="centerInside"
-            android:layout_marginLeft="370dp"
+            android:layout_marginLeft="350dp"
             android:layout_marginTop="30dp"
-            android:src="@drawable/form_page_arrow">
-        </ImageButton>
+            android:background="col"
+            android:scaleType="centerInside"
+            android:src="@drawable/form_page_arrow"></ImageButton>
 
         <View
             android:id="@+id/divider6"
@@ -93,7 +91,7 @@
         android:id="@+id/button2"
         android:layout_width="match_parent"
         android:layout_height="80dp"
-        android:layout_marginTop="220dp"
+        android:layout_marginTop="256dp"
         android:background="@drawable/form_button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -110,7 +108,6 @@
                 android:paddingLeft="20dp"
                 android:paddingTop="18dp"
                 android:text="Travel Itinerary"
-                android:textColor="#373636"
                 android:textSize="16dp" />
 
             <Button
@@ -122,17 +119,18 @@
                 android:paddingLeft="20dp"
                 android:text="View Results"
                 android:textColor="@color/dark_blue"
-                android:textSize="14dp"/>
+                android:textSize="14dp" />
         </LinearLayout>
 
         <ImageButton
             android:id="@+id/travelButton"
-            android:layout_width="25dp"
+            android:layout_width="55dp"
             android:layout_height="25dp"
-            android:layout_marginLeft="370dp"
-            android:scaleType="centerInside"
+            android:layout_marginLeft="350dp"
             android:layout_marginTop="30dp"
-            android:src="@drawable/form_page_arrow"/>
+            android:background="col"
+            android:scaleType="centerInside"
+            android:src="@drawable/form_page_arrow" />
 
         <View
             android:id="@+id/divider5"
@@ -148,6 +146,10 @@
         android:layout_height="1dp"
         android:background="?android:attr/listDivider"
         tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="301dp" />
+        tools:layout_editor_absoluteY="340dp" />
+
+    <!--    <include-->
+<!--        android:id="@+id/navigationBar"-->
+<!--        layout="@layout/navigation_bar" />-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
